2012-04-09  David Grundberg  <individ@acc.umu.se>

	* octave_to_python.cc, python_to_octave.cc, pytave.cc: Undef
	HAVE_STAT and HAVE_FSTAT consistently through-out all files.

2012-04-09  David Grundberg  <individ@acc.umu.se>

	* m4/ax_python_numpy.m4: Add missing link flags to test.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc (func_eval): Catch & rethrow std::bad_alloc.
	(str_eval): Likewise.

2009-09-27  David Grundberg  <individ@acc.umu.se>

	* configure.ac: Fix typo.

2009-09-26  David Grundberg  <individ@acc.umu.se>

	* configure.ac: Make NumPy default. Replace --enable flags with
	--with-type flags. Rework output.
	* m4/ax_python_numeric.m4 (AX_PYTHON_NUMERIC): Check for Numeric
	extentions for Python.

2009-09-26  David Grundberg  <individ@acc.umu.se>

	* m4/ax_python_numpy.m4 (AX_PYTHON_NUMPY): Restore CPPFLAGS.

2009-09-26  David Grundberg  <individ@acc.umu.se>

	* configure.ac: Look for NumPy. List which dependencies that are
	missing.
	* pytave.cc (init): One-line comment about NumPy.
	* m4/ax_python_numpy.m4: New file.
	* m4/ax_octave.m4: Send output variable by name.
	* Makefile.am (_pytave_la_CPPFLAGS): Substitute NumPy include
	directory from configuration.
	* setup.py.in: Ditto.
	* Jamfile.in: Add warning against using bjam.

2009-09-21  Jaroslav Hajek  <highegg@gmail.com>

	* python_to_octave.cc (copy_pyarrobj_to_octarray_boot,
	pyarr_to_octvalue): Support NumPy string arrays.

2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	* package/pytave.py: Safer check for interactive (mod_wsgi in
	Apache!)
	
2009-09-18  Jaroslav Hajek  <highegg@gmail.com>
	
	* python_to_octave.cc (copy_pyarrobj_to_octarray,
	pyarr_to_octvalue): Support 0D case.

2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	* package/pytave.py (simplify): Improve NumPy compatibility.

2009-09-17  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc: Move #include of arrayobjectdefs after pytavedefs to
	ensure config.h is included.
